# taskforceai-open

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .oxfmtrc.json  .taplo.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE.md  README.md  SECURITY.md  bunfig.toml  oxlint.config.json  package.json  tailwind.preset.css  tsconfig.json  turbo.json
apps/app-server/: Cargo.toml  README.md
apps/app-server/src/: api.rs  http.rs  http_support.rs  interactions.rs  lib.rs  main.rs  mcp.rs  mcp_tests.rs  ollama.rs  protocol.rs  remote_relay.rs  stdio.rs  tls.rs
apps/app-server/src/api/: client.rs  errors.rs  models.rs  sse.rs  tests.rs  utils.rs
apps/app-server/src/http/: runtime_transport.rs  tests.rs
apps/app-server/src/remote_relay/: tests.rs
apps/app-server/src/runtime/: approval.rs  error.rs  format.rs  git_review_tests.rs  impl_api_request.rs  impl_catalogs.rs  impl_channels_schedules.rs  impl_commands.rs  impl_commands_account.rs  impl_commands_artifacts.rs  impl_commands_models.rs  impl_commands_modes.rs  impl_commands_ops.rs  impl_commands_orchestration.rs  impl_commands_queue.rs  impl_commands_settings.rs  impl_commands_sync.rs  impl_compat.rs  impl_conversations.rs  impl_git_review.rs  impl_goals_agents.rs  impl_history_status.rs  impl_lifecycle.rs  impl_process.rs  impl_remote.rs  impl_runs.rs  impl_runs_tests.rs  impl_settings.rs  impl_state.rs  impl_sync.rs  impl_threads.rs  impl_threads_tests.rs  impl_voice.rs  impl_workflows.rs  mcp_util.rs  mock_server.rs  mock_server_tests.rs  mod.rs  models.rs  models_command_tests.rs  (+9 more)
apps/app-server/src/stdio/: connection.rs  dispatch.rs  dispatch_tests.rs  handler.rs  methods.rs  registry.rs  responses.rs  tests.rs  transport.rs
apps/app-server/src/store/: changes.rs  codec.rs  conversations.rs  metadata.rs  mod.rs  queue.rs  runs.rs  schema.rs
apps/desktop/: .gitignore  ARCHITECTURE.md  Cargo.toml  loading.html  tarpaulin.toml  tauri.conf.json  tauri.dev.local.conf.json  tauri.dev.prod.conf.json  tsconfig.json  vite.config.ts
apps/desktop/capabilities/: default.json  main.json
apps/desktop/icons/: icon.icns
apps/desktop/macos/: entitlements.plist
apps/desktop/macos/authorization-plugins/: README.md
apps/desktop/src/: app.rs  appshots.rs  appshots_tests.rs  local_coding.rs  local_coding_tests.rs  locked_computer_use.rs  locked_computer_use_tests.rs  main.rs  observability.rs  process_output.rs  screen_memory.rs  screen_memory_tests.rs  terminal_authorization.rs  tests.rs  workspace_checkpoints.rs  worktrees.rs  worktrees_tests.rs
apps/desktop/src/app/: bootstrap.rs  config.rs  runtime.rs
apps/desktop/src/app_server/: http.rs  mod.rs  ssh.rs  types.rs
apps/desktop/src/commands/: browser.rs  logging.rs  logging_tests.rs  mcp.rs  mod.rs  ui.rs  update.rs
apps/desktop/src/mcp/: mod.rs  test-fixture-server.mjs  tests.rs
apps/desktop/src/state/: app_state.rs  app_state_tests.rs  bootstrap.rs  bootstrap_tests.rs  mod.rs
apps/desktop/src/voice/: mod.rs  voice_tests.rs
apps/desktop/tests/: terminal_process_authorization.rs
apps/desktop/ui/: desktop-client.test.tsx  desktop-client.tsx  desktop-integration.ts  desktop-routes.tsx  vite-config.test.ts
apps/desktop/ui/app-shell/: DesktopAgentManagerPanel.test.tsx  DesktopAgentManagerPanel.tsx  DesktopAgentSummaryBlock.tsx  DesktopAuthButtons.test.tsx  DesktopAuthButtons.tsx  DesktopBrowserDeveloperPanel.test.tsx  DesktopBrowserDeveloperPanel.tsx  DesktopBrowserPanel.test.tsx  DesktopBrowserPanel.tsx  DesktopCodeOpenInMenu.test.tsx  DesktopCodeOpenInMenu.tsx  DesktopCodePinnedSummary.test.tsx  DesktopCodePinnedSummary.tsx  DesktopCodeWorkspaceSurface.test.tsx  DesktopCodeWorkspaceSurface.tsx  DesktopCompanion.tsx  DesktopGitDiffPreview.tsx  DesktopGitReviewPanel.test.tsx  DesktopGitReviewPanel.tsx  DesktopInlineReviewThreads.tsx  DesktopPullRequestReview.tsx  DesktopTerminalPanel.test.tsx  DesktopTerminalPanel.tsx  DesktopTerminalSession.tsx  DesktopWindowDragRegion.tsx  DesktopWorkspaceControls.test.tsx  DesktopWorkspaceMentionMenu.tsx  DesktopWorkspaceTargetSelector.tsx  ReviewCodeSurface.test.tsx  ReviewCodeSurface.tsx  WorkspaceFileEditor.test.tsx  WorkspaceFileEditor.tsx  WorkspaceFileTreePanel.test.tsx  WorkspaceFileTreePanel.tsx  desktop-panel-styles.ts  useDesktopBrowserPreview.test.tsx  useDesktopBrowserPreview.ts  useDesktopCompanionPet.test.tsx  useDesktopCompanionPet.ts  useDesktopGitReview.test.tsx  (+5 more)
apps/desktop/ui/platform/: TauriReadySignal.test.tsx  TauriReadySignal.tsx  api-fetch.test.ts  api-fetch.ts  app-server-types.ts  app-server.test.ts  app-server.ts  auth-events.test.ts  bridge.test.ts  conversation-store.test.ts  conversation-store.ts  disableDesktopConsoleLogs.test.ts  disableDesktopConsoleLogs.ts  http-app-server.ts  streaming-runtime.ts  sync-client.test.ts  sync-client.ts  useDesktopHttpAppServerPairing.test.tsx  useDesktopHttpAppServerPairing.ts  voice-gateway.test.ts  voice-gateway.ts
apps/desktop/ui/profile/: ProfileDesktopAppshotSection.tsx  ProfileDesktopBrowserPreviewSection.tsx  ProfileDesktopLocalSection.environments-browser.test.tsx  ProfileDesktopLocalSection.helpers.ts  ProfileDesktopLocalSection.test-harness.tsx  ProfileDesktopLocalSection.test.tsx  ProfileDesktopLocalSection.tsx  ProfileDesktopPairingSection.test.tsx  ProfileDesktopPairingSection.tsx  ProfileDesktopScreenMemorySection.tsx  ProfileDesktopWorkspaceSection.tsx  useDesktopBrowserPreviewSection.ts
apps/desktop/ui/scripts/: ttft-latency.ts
apps/desktop/ui/shell/: DesktopProjectsSidebar.test.tsx  DesktopProjectsSidebar.tsx  DesktopUpdateButton.test.tsx  DesktopUpdateButton.tsx
apps/desktop/ui/storage/: tauri-adapter-mappers.test.ts  tauri-adapter-mappers.ts  tauri-adapter.test.ts  tauri-adapter.ts
apps/tui/: Cargo.toml  LICENSE  README.md  install.cmd  install.ps1  install.sh  uninstall.sh
apps/tui/src/: app.rs  clipboard.rs  context.rs  external_editor.rs  input.rs  local_coding.rs  main.rs  notifications.rs  permissions.rs  prompt_history.rs  skills.rs  terminal_title.rs  test_support.rs  update.rs  voice.rs
(+2598 files in other folders)
