[package]
name = "taskforceai-app-server"
version = "0.11.3"
edition = "2021"
description = "TaskForceAI local app-server runtime"
authors = ["TaskForceAI"]
license = "Proprietary"
repository = "https://github.com/TaskForceAI"
rust-version = "1.96.0"
publish = false

[dependencies]
base64 = "0.22"
futures-util = "0.3"
keyring = "3"
log = "0.4"
rand = "0.9"
reqwest = {version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false}
rmcp = {version = "1.1.0", default-features = false, features = [
  "client",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
  "reqwest",
]}
rusqlite = {version = "0.32", features = ["bundled"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
semver = "1.0"
taskforceai-app-protocol = {path = "../../packages/app-protocol-rs"}
thiserror = "1.0"
tokio = {version = "1.0", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"]}
