[package]
name = "taskforceai-desktop"
version = "0.5.1"
description = "TaskForceAI Desktop - Local-first desktop app with remote AI API"
authors = ["TaskForceAI"]
license = "Proprietary"
repository = "https://github.com/TaskForceAI"
edition = "2021"
rust-version = "1.96.0"
publish = false

[build-dependencies]
tauri-build = {version = "2.5.3", features = []}

[dependencies]
base64 = "0.22"
serde_json = "1.0.145"
serde = {version = "1.0.228", features = ["derive"]}
log = "0.4.28"
rand = "0.9"
url = "2.5"
tauri = {version = "2.9.5", features = []}
tokio = {version = "1.0", features = ["full"]}
reqwest = {version = "0.12", features = ["json", "stream"]}
thiserror = "1.0"
tts = "0.26"
once_cell = "1.20"
parking_lot = "0.12"
tracing = {version = "0.1", features = ["std", "log", "attributes"]}
tracing-log = "0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "ansi", "json"]}
metrics = "0.23"
sentry = {version = "0.48.2", features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]}
sentry-tracing = "0.48.2"
rmcp = {version = "1.8.0", default-features = false, features = [
  "client",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
  "reqwest-native-tls",
]}
taskforceai-app-client = {path = "../../packages/app-client-rs"}
taskforceai-app-protocol = {path = "../../packages/app-protocol-rs"}
tauri-plugin-updater = "2"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"

[package.metadata.cargo-llvm-cov]
exclude = ["src/main.rs"]

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(coverage)', 'cfg(tarpaulin_include)']}
